# open-asset-model.py

./: .gitignore  README.md  asset.py  pyproject.toml  relation.py  requirements.txt
account/: account.py  account_test.py
certificate/: tls_certificate.py  tls_certificate_test.py
contact/: contact_record.py  contact_record_test.py  location.py  location_test.py  phone.py  phone_test.py
dns/: dns_record.py  dns_record_test.py  fqdn.py  fqdn_test.py
file/: file.py  file_test.py
financial/: funds_transfer.py  funds_transfer_test.py
general/: identifier.py  identifier_test.py  port.py  port_test.py  simple.py  simple_test.py  source.py  source_test.py
network/: autonomous_system.py  autonomous_system_test.py  ip_address.py  ip_address_test.py  netblock.py  netblock_test.py
org/: org.py  org_test.py
people/: person.py  person_test.py
pf/: product.py  product_test.py  service.py  service_test.py  vuln.py  vuln_test.py
registration/: autnum_record.py  autnum_record_test.py  domain_record.py  domain_record_test.py  ipnet_record.py  ipnet_record_test.py
src/asset_model/: __init__.py  oam_object.py  oam_object_test.py  relation.py  utils.py
src/asset_model/dns/: __init__.py  dns_record.py  dns_record_test.py
src/asset_model/file/: file.py
src/oam/: __init__.py  oam_object.py  property.py  relation.py  utils.py
src/oam/account/: account.py  account_test.py
src/oam/certificate/: __init__.py  tls_certificate.py  tls_certificate_test.py
src/oam/contact/: __init__.py  contact_record.py  contact_record_test.py  location.py  (+3 more)
url/: url.py  url_test.py
(+45 files in other folders)
