[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "open-asset-model"
version = "0.0.1"
authors = [
  { name="J. Oppliger", email="julien@oppliger.cc" },
]
description = "A Python implementation of the Open Asset Model."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/0ppliger/open-asset-model.py"
Issues = "https://github.com/0ppliger/open-asset-model.py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oam"]